# decomposition_analysis

./: README.md  main.py  prompt1.md  prompt_driver.md  pyproject.toml
examples/: rates_multiperiod.csv  rates_two_period.csv
markdown/: 00_field_map.md  01_rates_kitagawa_dasgupta.md  02_index_numbers_lmdi_pvm_sda.md  03_oaxaca_reweighting_rif.md  04_shapley_anova_ml.md  05_econometrics_causality_driver_trees.md  06_subgroup_discovery_pattern_mining.md  07_complete_growth_workflow.md  README.md
notebooks/: 00_field_map.ipynb  01_rates_kitagawa_dasgupta.ipynb  02_index_numbers_lmdi_pvm_sda.ipynb  03_oaxaca_reweighting_rif.ipynb  04_shapley_anova_ml.ipynb  05_econometrics_causality_driver_trees.ipynb  06_subgroup_discovery_pattern_mining.ipynb  07_complete_growth_workflow.ipynb
scripts/: __init__.py  build_course.py  rate_decomposition.py  run_rate_decomposition.py  shapley_decomposition.py
tests/: __init__.py  test_rate_decomposition.py  test_shapley_decomposition.py
working_paper/: hierarchical_counterfactual_decomposition.md
